--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
         h1 {
             margin-bottom: 50px;
             font-size: 2.5em;
+            text-align: center;
         }
         .enter-button {
+            display: block;
+            margin: 0 auto;
             padding: 10px 20px;
             font-size: 1.2em;
             background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
+            border-radius: 12px; /* Rounded edges */
         }
         .enter-button:hover {
             background-color: #45a049;
