--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
             align-items: center;
             height: 100vh;
             font-family: Arial, sans-serif;
+            /* Add your image URL below */
+            background: url('https://imgbox.com/BHITgNTL') no-repeat center center fixed; 
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
         }
         h1 {
             margin-bottom: 50px;
