--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             height: 100vh;
             font-family: Arial, sans-serif;
             /* Add your image URL below */
-            background: url('https://images2.imgbox.com/4a/a4/BHITgNTL_o.png') no-repeat center center fixed; 
+            background: url('https://i.imgur.com/nuyIPZf.png?1') no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
