--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             height: 100vh;
             font-family: Arial, sans-serif;
             /* Add your image URL below */
-            background: url('https://i.imgur.com/nuyIPZf.png?1') no-repeat center center fixed; 
+            background: url('https://imgbox.com/BHITgNTL') no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -18,7 +18,7 @@
         }
         h1 {
             margin-bottom: 50px;
-            font-size: 2.5em;
+            font-size: 7.5em; /* Increased from 2.5em to 7.5em */
             text-align: center;
         }
         .enter-button {
