--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 <head>
     <title>Aberration Research Institute</title>
+    <!-- Import Poppins font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            font-family: Arial, sans-serif;
+            /* Apply Poppins font */
+            font-family: 'Poppins', sans-serif;
             /* Add your image URL below */
-            background: url(https://i.imgur.com/nuyIPZf.png?1) no-repeat center center fixed; 
+            background: url('https://i.imgur.com/nuyIPZf.png?1') no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
