--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             align-items: center;
             height: 100vh;
             font-family: 'Poppins', sans-serif;
-            background: url('https://i.imgur.com/nuyIPZf.png?1') no-repeat center center fixed; 
+            background: url('background-image-url') no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -24,8 +24,8 @@
         .enter-button {
             display: block;
             margin: 0 auto;
-            padding: 10px 20px;
-            font-size: 1.2em;
+            padding: 15px 30px; /* Increased padding */
+            font-size: 1.4em; /* Increased font size */
             background-color: #333333;
             color: white;
             border: none;
