--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             align-items: center;
             height: 100vh;
             font-family: 'Poppins', sans-serif;
-            background: url('background-image-url') no-repeat center center fixed; 
+            background: url('https://i.imgur.com/nuyIPZf.png?1') no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
