--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             margin-bottom: 50px;
             font-size: 6.5em;
             text-align: center;
+            font-weight: 400; /* Changed font-weight to make it thinner */
         }
         .enter-button {
             display: block;
