--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <div>
         <h1>Aberration Research Institute</h1>
-        <button class="enter-button" onclick="location.href='your-target-page.html'">Enter</button>
+        <button class="enter-button" onclick="location.href='homepage.html'">Enter</button>
     </div>
 </body>
 </html>
