--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         .enter-button {
             display: block;
             margin: 0 auto;
-            padding: 15px 30px; /* Increased padding */
-            font-size: 1.4em; /* Increased font size */
+            padding: 20px 35px; /* Increased padding */
+            font-size: 1.5em; /* Increased font size */
             background-color: #333333;
-            color: white;
+            color: black; /* Changed text color to black */
             border: none;
             cursor: pointer;
             border-radius: 12px;
