--- a/homepage.html
+++ b/homepage.html
@@ -8,10 +8,10 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #333333; /* Changed to dark grey */
         }
         .navbar {
-            background-color: #333;
+            background-color: #1a1a1a; /* Slightly darker for contrast */
             overflow: hidden;
         }
         .navbar a {
