--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
             background-color: #3a3a3a; /* Slightly lighter grey */
         }
         .navbar {
-            background-color: #1a1a1a; /* Remains slightly darker for contrast */
+            background-color: #1a1a1a; /* Slightly darker for contrast */
             overflow: hidden;
         }
         .navbar a {
@@ -42,6 +42,7 @@
 <body>
     <div class="navbar">
         <a href="#home">Home</a>
+        <a href="#aberrations">Aberrations Index</a>
         <a href="#about">About</a>
         <a href="#research">Research</a>
         <a href="#contact">Contact</a>
