--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,7 @@
 <body>
     <div class="navbar">
         <a href="#home">Home</a>
-        <a href="#aberrations">Aberrations Index</a>
+        <a href="#aberrations">Aberration Index</a>
         <a href="#about">About</a>
         <a href="#research">Research</a>
         <a href="#contact">Contact</a>
