--- a/homepage.html
+++ b/homepage.html
@@ -41,9 +41,9 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#home">Home</a>
+        <a href="homepage.html">Home</a>
         <a href="ABRlist.html">Aberration Index</a>
-        <a href="#about">About</a>
+        <a href="about.html">About</a>
         <a href="#research">Research</a>
         <a href="#contact">Contact</a>
     </div>
