--- a/ABRlist.html
+++ b/ABRlist.html
@@ -64,9 +64,9 @@
         <ul>
             <!-- Generate list of ABRs -->
             <!-- Each item is a placeholder link -->
-            <li><a href="ABR1.html">Aberration Research Record ABR1</a></li>
-            <li><a href="ABR2.html">Aberration Research Record ABR2</a></li>
-            <li><a href="ABR3.html">Aberration Research Record ABR3</a></li>
+            <li><a href="ABR001.html">ABR-001</a></li>
+            <li><a href="ABR002.html">ABR-002</a></li>
+            <li><a href="ABR003.html">ABR-003</a></li>
             <!-- Continue listing up to ABR50 -->
             <li><a href="ABR50.html">Aberration Research Record ABR50</a></li>
         </ul>
