--- a/ABRlist.html
+++ b/ABRlist.html
@@ -9,10 +9,12 @@
             margin: 0;
             padding: 0;
             background-color: #3a3a3a; /* Consistent dark grey background */
+            display: flex; /* Using Flexbox for layout */
         }
         .navbar {
             background-color: #1a1a1a;
             overflow: hidden;
+            width: 100%; /* Ensures the navbar spans the full width */
         }
         .navbar a {
             float: left;
@@ -26,7 +28,15 @@
             background-color: #ddd;
             color: black;
         }
-        .container {
+        .sidebar {
+            width: 33%; /* Sidebar takes up one-third of the body's width */
+            background-color: #2d2d2d; /* Dark background for sidebar */
+            padding: 20px;
+            color: white;
+            height: 100vh; /* Full height */
+        }
+        .content {
+            width: 67%; /* Remaining content area */
             padding: 20px;
             color: white;
         }
@@ -37,9 +47,6 @@
         li {
             padding: 8px;
             margin: 5px 0;
-            background-color: #2d2d2d;
-            border: none;
-            text-align: center;
         }
         a {
             color: #9c9c9c; /* Light grey links for readability */
@@ -58,8 +65,7 @@
         <a href="research.html">Research</a>
         <a href="contact.html">Contact</a>
     </div>
-
-    <div class="container">
+    <div class="sidebar">
         <h1>Aberration Index</h1>
         <ul>
             <!-- Generate list of ABRs -->
@@ -68,8 +74,11 @@
             <li><a href="ABR002.html">ABR-002</a></li>
             <li><a href="ABR003.html">ABR-003</a></li>
             <!-- Continue listing up to ABR50 -->
-            <li><a href="ABR50.html">Aberration Research Record ABR50</a></li>
+            <li><a href="ABR050.html">ABR-050</a></li>
         </ul>
+    </div>
+    <div class="content">
+        <!-- Additional content can go here -->
     </div>
 </body>
 </html>
