--- a/ABRlist.html
+++ b/ABRlist.html
@@ -4,75 +4,56 @@
     <title>Aberration Index - Aberration Research Institute</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* Sets the default font and background color for the entire page */
         body {
-            font-family: 'Poppins', sans-serif; /* Sets the font to Poppins, which is imported from Google Fonts */
-            margin: 0; /* Removes default margin from the body */
-            padding: 0; /* Removes default padding from the body */
-            background-color: #3a3a3a; /* Sets the background color to a dark grey */
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #3a3a3a;
         }
-
-        /* Styles the navigation bar */
         .navbar {
-            background-color: #1a1a1a; /* Darker background color for contrast */
-            overflow: hidden; /* Prevents content from spilling outside the navbar */
+            background-color: #1a1a1a;
+            overflow: hidden;
         }
-
-        /* Styles the links within the navbar */
         .navbar a {
-            float: left; /* Positions links to the left side in a row */
-            display: block; /* Makes each link a block-level element */
-            color: #f2f2f2; /* Light grey text for readability */
-            text-align: center; /* Centers text inside the link */
-            padding: 14px 20px; /* Adds padding around the text for better touch target and spacing */
-            text-decoration: none; /* Removes underline from links */
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
         }
-
-        /* Changes the style of links on hover for visual feedback */
         .navbar a:hover {
-            background-color: #ddd; /* Light background on hover */
-            color: black; /* Dark text on hover */
+            background-color: #ddd;
+            color: black;
         }
-
-        /* Container for main content with flexible box layout */
         .container {
-            padding: 20px; /* Padding around the content inside the container */
-            color: white; /* Text color for content */
-            display: flex; /* Enables flexible box model layout */
+            padding: 20px;
+            color: white;
+            display: flex;
         }
-
-        /* Specific styling for the list container */
         .aberrations-list {
-            width: 400px; /* Doubled width for the list */
-            background-color: #2d2d2d; /* Slightly lighter grey than body for contrast */
-            padding: 10px; /* Padding inside the list container */
-            margin-right: 20px; /* Right margin for spacing between list and other content */
-            border: 2px solid #1a1a1a; /* Adds a border with a darker grey */
+            width: 400px;
+            background-color: #2d2d2d;
+            padding: 10px;
+            margin-right: 20px;
+            border: 2px solid #1a1a1a;
+            margin-left: 50px; /* Adds left margin to move the list slightly to the right */
         }
-
-        /* Styles the list */
         ul {
-            list-style-type: none; /* Removes default bullet points */
-            padding: 0; /* Removes default padding */
-            margin: 0; /* Removes default margin */
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
         }
-
-        /* Styles each list item */
         li {
-            padding: 8px; /* Adds padding inside each list item for spacing */
-            margin: 5px 0; /* Adds vertical margin for spacing between list items */
-            border: none; /* No borders for list items */
+            padding: 8px;
+            margin: 5px 0;
         }
-
-        /* Styles links within the list */
         a {
-            color: #9c9c9c; /* Sets the color of links to light grey for readability */
-            text-decoration: none; /* Removes underline from links */
+            color: #9c9c9c;
+            text-decoration: none;
         }
-
-        /* Enhances link appearance on hover */
         a:hover {
-            color: #ffffff; /* White text on hover for high contrast */
+            color: #ffffff;
         }
     </style>
 </head>
@@ -89,14 +70,13 @@
         <div class="aberrations-list">
             <h1>Aberration Index</h1>
             <ul>
-                <!-- Each item is a placeholder link to a specific ABR page -->
                 <li><a href="ABR001.html">ABR-001</a></li>
                 <li><a href="ABR002.html">ABR-002</a></li>
                 <li><a href="ABR003.html">ABR-003</a></li>
-                <!-- Continue listing up to ABR050 -->
                 <li><a href="ABR050.html">ABR-050</a></li>
             </ul>
         </div>
         <!-- Optional: Add other content here -->
     </div>
-</body
+</body>
+</html>
