--- a/ABRlist.html
+++ b/ABRlist.html
@@ -37,7 +37,7 @@
             padding: 10px;
             margin-right: 20px;
             border: 2px solid #1a1a1a;
-            margin-left: 150px; /* Adds left margin to move the list slightly to the right */
+            margin-left: 150px; /* Increased left margin to move the list further to the right */
         }
         ul {
             list-style-type: none;
@@ -73,7 +73,23 @@
                 <li><a href="ABR001.html">ABR-001</a></li>
                 <li><a href="ABR002.html">ABR-002</a></li>
                 <li><a href="ABR003.html">ABR-003</a></li>
-                <li><a href="ABR050.html">ABR-050</a></li>
+                <li><a href="ABR004.html">ABR-004</a></li>
+                <li><a href="ABR005.html">ABR-005</a></li>
+                <li><a href="ABR006.html">ABR-006</a></li>
+                <li><a href="ABR007.html">ABR-007</a></li>
+                <li><a href="ABR008.html">ABR-008</a></li>
+                <li><a href="ABR009.html">ABR-009</a></li>
+                <li><a href="ABR010.html">ABR-010</a></li>
+                <li><a href="ABR011.html">ABR-011</a></li>
+                <li><a href="ABR012.html">ABR-012</a></li>
+                <li><a href="ABR013.html">ABR-013</a></li>
+                <li><a href="ABR014.html">ABR-014</a></li>
+                <li><a href="ABR015.html">ABR-015</a></li>
+                <li><a href="ABR016.html">ABR-016</a></li>
+                <li><a href="ABR017.html">ABR-017</a></li>
+                <li><a href="ABR018.html">ABR-018</a></li>
+                <li><a href="ABR019.html">ABR-019</a></li>
+                <li><a href="ABR020.html">ABR-020</a></li>
             </ul>
         </div>
         <!-- Optional: Add other content here -->
