--- a/ABR001.html
+++ b/ABR001.html
@@ -8,8 +8,8 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #3a3a3a;
-            color: #f2f2f2;
+            background-color: #f0f0f0;
+            color: #000000; /* Set text color to black */
         }
         .navbar {
             background-color: #1a1a1a;
@@ -29,18 +29,20 @@
         }
         .container {
             padding: 20px;
+            background-color: #fff; /* Light background for the main container */
+            margin: 20px auto;
+            max-width: 800px; /* Sets a max width for the container */
+            border-radius: 10px; /* Rounded corners for the container */
+            box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Soft shadow around the container */
         }
         h1, h2 {
             text-align: center;
         }
-        .info-section {
-            margin: 20px;
-            background-color: #2d2d2d;
-            padding: 15px;
-            border-radius: 8px;
-        }
         p, ul {
             line-height: 1.6;
+        }
+        ul {
+            padding-left: 20px; /* Add padding to list for better formatting */
         }
     </style>
 </head>
@@ -55,44 +57,31 @@
 
     <div class="container">
         <h1>ABR-002: Voidshadow</h1>
+        <h2>General Information</h2>
+        <p><strong>Aberration Designation:</strong> ABR-002</p>
+        <p><strong>Threat Level:</strong> Critical (CR)</p>
+        <p><strong>Containment Level:</strong> Gamma-2</p>
 
-        <div class="info-section">
-            <h2>General Information</h2>
-            <p><strong>Aberration Designation:</strong> ABR-002</p>
-            <p><strong>Threat Level:</strong> Critical (CR)</p>
-            <p><strong>Containment Level:</strong> Gamma-2</p>
-        </div>
+        <h2>Description</h2>
+        <p>ABR-002, designated "Voidshadow," manifests as a dynamic, fluid-like mass of darkness, approximately 2 meters in height. This entity exhibits unusual optical properties, allowing it to blend seamlessly into low-light environments. It appears as a shifting void, absorbing light and making it nearly invisible in dark settings.</p>
 
-        <div class="info-section">
-            <h2>Description</h2>
-            <p>ABR-002, designated "Voidshadow," manifests as a dynamic, fluid-like mass of darkness, approximately 2 meters in height. This entity exhibits unusual optical properties, allowing it to blend seamlessly into low-light environments. It appears as a shifting void, absorbing light and making it nearly invisible in dark settings.</p>
-        </div>
+        <h2>Behavior and Cognitive Capacity</h2>
+        <p>ABR-002 displays advanced cognitive abilities, including strategic planning and high-level problem-solving skills. Its behavior suggests a malevolent intelligence, capable of manipulating its environment and those within it to achieve its goals.</p>
 
-        <div class="info-section">
-            <h2>Behavior and Cognitive Capacity</h2>
-            <p>ABR-002 displays advanced cognitive abilities, including strategic planning and high-level problem-solving skills. Its behavior suggests a malevolent intelligence, capable of manipulating its environment and those within it to achieve its goals.</p>
-        </div>
+        <h2>Neurological Disruption</h2>
+        <p>Upon physical contact with a host, ABR-002 disrupts neurological functions, leading to significant behavioral changes. Affected individuals exhibit altered behavior patterns, often appearing as though under external control. Symptoms include heightened aggression, loss of free will, and susceptibility to external influences, suggesting a form of possession or mind control.</p>
 
-        <div class="info-section">
-            <h2>Neurological Disruption</h2>
-            <p>Upon physical contact with a host, ABR-002 disrupts neurological functions, leading to significant behavioral changes. Affected individuals exhibit altered behavior patterns, often appearing as though under external control. Symptoms include heightened aggression, loss of free will, and susceptibility to external influences, suggesting a form of possession or mind control.</p>
-        </div>
+        <h2>Containment Procedures</h2>
+        <ul>
+            <li><strong>Location:</strong> ABR-002 is to be contained in a 5m x 5m x 5m chamber constructed of non-reflective, high-density polymer, designed to absorb any light within the containment area.</li>
+            <li><strong>Lighting:</strong> The chamber must remain brightly lit at all times to prevent ABR-002 from effectively camouflaging itself. Light levels should be no less than 10,000 lumens.</li>
+            <li><strong>Surveillance:</strong> 24/7 surveillance is mandatory, with at least two personnel monitoring the live feed at all times. Infrared and ultraviolet cameras are to be used to detect ABR-002's presence.</li>
+            <li><strong>Access Restrictions:</strong> Only personnel with Clearance Level 4 (C4) or higher may enter the containment chamber. Entry is permitted only for essential maintenance or research, and personnel must wear full-body reflective suits to minimize physical contact.</li>
+        </ul>
 
-        <div class="info-section">
-            <h2>Containment Procedures</h2>
-            <ul>
-                <li><strong>Location:</strong> ABR-002 is to be contained in a 5m x 5m x 5m chamber constructed of non-reflective, high-density polymer, designed to absorb any light within the containment area.</li>
-                <li><strong>Lighting:</strong> The chamber must remain brightly lit at all times to prevent ABR-002 from effectively camouflaging itself. Light levels should be no less than 10,000 lumens.</li>
-                <li><strong>Surveillance:</strong> 24/7 surveillance is mandatory, with at least two personnel monitoring the live feed at all times. Infrared and ultraviolet cameras are to be used to detect ABR-002's presence.</li>
-                <li><strong>Access Restrictions:</strong> Only personnel with Clearance Level 4 (C4) or higher may enter the containment chamber. Entry is permitted only for essential maintenance or research, and personnel must wear full-body reflective suits to minimize physical contact.</li>
-            </ul>
-        </div>
-
-        <div class="info-section">
-            <h2>Incident Log ABR-002-01</h2>
-            <p>Date: ██/██/████</p>
-            <p>Summary: During a routine containment check, Researcher ██████ made contact with ABR-002. Within minutes, the researcher exhibited signs of neurological disruption, including uncharacteristic aggression and attempts to sabotage containment protocols. Immediate intervention by security personnel prevented further breach. Researcher ██████ was quarantined for observation and later terminated to prevent further contamination.</p>
-        </div>
+        <h2>Incident Log ABR-002-01</h2>
+        <p>Date: ██/██/████</p>
+        <p>Summary: During a routine containment check, Researcher ██████ made contact with ABR-002. Within minutes, the researcher exhibited signs of neurological disruption, including uncharacteristic aggression and attempts to sabotage containment protocols. Immediate intervention by security personnel prevented further breach. Researcher ██████ was quarantined for observation and later terminated to prevent further contamination.</p>
     </div>
 </body>
 </html>
