--- a/ABR002.html
+++ b/ABR002.html
@@ -17,7 +17,7 @@
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
-            background-color: #fff;
+            background-color: #d3d3d3; /* Light grey background for the main container */
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
@@ -31,13 +31,13 @@
             color: #333;
             margin-top: 20px;
         }
-        p {
+        p, ul {
             font-size: 16px;
             line-height: 1.6;
         }
         ul {
             list-style-type: none;
-            padding: 0;
+            padding-left: 0;
         }
         li {
             padding: 5px 0;
