--- a/ABR002.html
+++ b/ABR002.html
@@ -10,14 +10,30 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #d3d3d3; /* Set the entire background to grey */
             color: #000;
+        }
+        .navbar {
+            background-color: #1a1a1a;
+            overflow: hidden;
+        }
+        .navbar a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
         }
         .container {
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
-            background-color: #d3d3d3; /* Light grey background for the main container */
+            background-color: #fff; /* Container background is white for content emphasis */
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
@@ -45,6 +61,14 @@
     </style>
 </head>
 <body>
+    <div class="navbar">
+        <a href="homepage.html">Home</a>
+        <a href="aberrations.html">Aberrations Index</a>
+        <a href="about.html">About</a>
+        <a href="research.html">Research</a>
+        <a href="contact.html">Contact</a>
+    </div>
+
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-002</h1>
         <p><strong>Aberration Designation:</strong> ABR-002</p>
