--- a/ABR002.html
+++ b/ABR002.html
@@ -33,7 +33,7 @@
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
-            background-color: #fff; /* Container background is white for content emphasis */
+            background-color: #d3d3d3; /* Container background is also grey */
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
