--- a/ABR002.html
+++ b/ABR002.html
@@ -10,7 +10,7 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #d3d3d3; /* Set the entire background to grey */
+            background-color: #d9d9d9; /* Set the entire background to grey */
             color: #000;
         }
         .navbar {
@@ -33,7 +33,7 @@
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
-            background-color: #d3d3d3; /* Container background is also grey */
+            background-color: #b0b0b0; /* Container background is also grey */
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
