--- a/ABR002.html
+++ b/ABR002.html
@@ -10,11 +10,11 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #d9d9d9; /* Set the entire background to grey */
+            background-color: #CBCBCB; /* Set the entire background to grey */
             color: #000;
         }
         .navbar {
-            background-color: #1a1a1a;
+            background-color: #B2B2B2;
             overflow: hidden;
         }
         .navbar a {
