--- a/ABR002.html
+++ b/ABR002.html
@@ -63,7 +63,7 @@
 <body>
     <div class="navbar">
         <a href="homepage.html">Home</a>
-        <a href="aberrations.html">Aberrations Index</a>
+        <a href="ABRlist.html">Aberrations Index</a>
         <a href="about.html">About</a>
         <a href="research.html">Research</a>
         <a href="contact.html">Contact</a>
