--- a/ABR002.html
+++ b/ABR002.html
@@ -14,13 +14,13 @@
             color: #000;
         }
         .navbar {
-            background-color: #B2B2B2;
+            background-color: #505050; /* Darker grey background for the navbar */
             overflow: hidden;
         }
         .navbar a {
             float: left;
             display: block;
-            color: #f2f2f2;
+            color: #000000; /* Black text color for navbar links */
             text-align: center;
             padding: 14px 20px;
             text-decoration: none;
