--- a/ABR002.html
+++ b/ABR002.html
@@ -10,17 +10,17 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #CBCBCB; /* Set the entire background to grey */
-            color: #000;
+            background-color: #757575; /* Set the entire background to grey */
+            color: #D3D3D3; /* Light grey text color for body */
         }
         .navbar {
-            background-color: #505050; /* Darker grey background for the navbar */
+            background-color: #4B4B4B; /* Darker grey background for the navbar */
             overflow: hidden;
         }
         .navbar a {
             float: left;
             display: block;
-            color: #000000; /* Black text color for navbar links */
+            color: #D3D3D3; /* Light grey text color for navbar links */
             text-align: center;
             padding: 14px 20px;
             text-decoration: none;
@@ -50,6 +50,7 @@
         p, ul {
             font-size: 16px;
             line-height: 1.6;
+            color: #D3D3D3; /* Light grey text color for paragraph and list */
         }
         ul {
             list-style-type: none;
