--- a/ABR002.html
+++ b/ABR002.html
@@ -33,7 +33,7 @@
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
-            background-color: #b0b0b0; /* Container background is also grey */
+            background-color: #4B4B4B; /* Container background is also grey */
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
@@ -44,7 +44,7 @@
         }
         h2 {
             font-size: 18px;
-            color: #333;
+            color: #D3D3D3;
             margin-top: 20px;
         }
         p, ul {
