--- a/ABR002.html
+++ b/ABR002.html
@@ -1,59 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Aberration Index - Aberration Research Institute</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ABR-002 - Aberration Research Institute</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #3a3a3a;
+            background-color: #757575; /* Set the entire background to grey */
+            color: #D3D3D3; /* Light grey text color for body */
         }
         .navbar {
-            background-color: #1a1a1a;
+            background-color: #4B4B4B; /* Darker grey background for the navbar */
             overflow: hidden;
         }
         .navbar a {
             float: left;
             display: block;
-            color: #f2f2f2;
+            color: #D3D3D3; /* Light grey text color for navbar links */
             text-align: center;
             padding: 14px 20px;
             text-decoration: none;
         }
         .navbar a:hover {
-            background-color: #ddd; /* Light grey background on hover */
-            color: black; /* Text color changes to black on hover */
+            background-color: #ddd;
+            color: black;
         }
         .container {
             padding: 20px;
-            color: white;
-            display: flex;
+            margin: 20px auto;
+            max-width: 800px;
+            background-color: #4B4B4B; /* Container background is also grey */
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
-        .aberrations-list {
-            width: 400px;
-            background-color: #2d2d2d;
-            padding: 10px;
-            margin-right: 20px;
-            border: 2px solid #1a1a1a;
-            margin-left: 150px; /* Increased left margin to move the list further to the right */
+        h1 {
+            font-size: 22px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 10px;
+        }
+        h2 {
+            font-size: 18px;
+            color: #D3D3D3;
+            margin-top: 20px;
+        }
+        p, ul {
+            font-size: 16px;
+            line-height: 1.6;
+            color: #D3D3D3; /* Light grey text color for paragraph and list */
         }
         ul {
             list-style-type: none;
-            padding: 0;
-            margin: 0;
+            padding-left: 0;
         }
         li {
-            padding: 8px;
-            margin: 5px 0;
-        }
-        a {
-            color: #9c9c9c;
-            text-decoration: none;
-        }
-        a:hover {
-            color: #ffffff; /* Text color changes to white on hover */
+            padding: 5px 0;
         }
     </style>
 </head>
