--- a/ABRlist.html
+++ b/ABRlist.html
@@ -23,8 +23,8 @@
             text-decoration: none;
         }
         .navbar a:hover {
-            background-color: #ddd;
-            color: black;
+            background-color: #ddd; /* Light grey background on hover */
+            color: black; /* Text color changes to black on hover */
         }
         .container {
             padding: 20px;
@@ -53,7 +53,7 @@
             text-decoration: none;
         }
         a:hover {
-            color: #ffffff;
+            color: #ffffff; /* Text color changes to white on hover */
         }
     </style>
 </head>
