--- a/ABRlist.html
+++ b/ABRlist.html
@@ -23,7 +23,7 @@
             text-decoration: none;
         }
         .navbar a:hover {
-            background-color: #ddd; /* Light grey background on hover */
+            background-color: #989898; /* Light grey background on hover */
             color: black; /* Text color changes to black on hover */
         }
         .container {
