--- a/ABRlist.html
+++ b/ABRlist.html
@@ -49,11 +49,14 @@
             margin: 5px 0;
         }
         a {
-            color: #9c9c9c;
+            color: #9c9c9c; /* Medium grey text color for links */
             text-decoration: none;
         }
         a:hover {
             color: #ffffff; /* Text color changes to white on hover */
+        }
+        h1 {
+            color: #9c9c9c; /* Sets the H1 color to match the link color */
         }
     </style>
 </head>
