--- a/ABR002.html
+++ b/ABR002.html
@@ -72,33 +72,34 @@
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-002</h1>
-        <p><strong>Aberration Designation:</strong> ABR-002</p>
-        <p><strong>Threat Level:</strong> Critical (CR)</p>
-        <p><strong>Containment Level:</strong> Gamma-2</p>
+        <p><strong>Aberration Designation:</strong> ABR-002 "Voidshadow"</p>
+        <p><strong>Threat Level:</strong> Class IV: Critical (CR)</p>
+        <p><strong>Containment Level:</strong> Level Delta-2</p>
 
         <h2>Description</h2>
-        <p>ABR-002, designated "Voidshadow," manifests as a dynamic, fluid-like mass of darkness, approximately 2 meters in height. This entity exhibits highly unusual optical properties, appearing as a moving void that absorbs light, rendering it nearly invisible in low-light environments. Its physical form is in constant flux, resembling a viscous liquid shadow with occasional tendrils extending and retracting from its central mass. When stationary, it can merge with shadows, becoming virtually undetectable.</p>
+        <p>ABR-002, designated "Voidshadow," is a dynamic, fluid-like mass of darkness approximately 2 meters in height. The entity exhibits highly unusual optical properties, appearing as a moving void that absorbs light, rendering it nearly invisible in low-light environments. Its physical form is in constant flux, resembling a viscous liquid shadow with occasional tendrils extending and retracting from its central mass. When stationary, it can merge with shadows, becoming virtually undetectable.</p>
 
-        <h2>Behavior and Cognitive Capacity</h2>
+        <h2>Containment Protocols</h2>
+        <p><strong>Containment Chamber:</strong> ABR-002 is to be contained in a 5m x 5m x 5m chamber constructed of non-reflective, high-density polymer, designed to absorb any light within the containment area. The chamber walls must be lined with an array of high-intensity LED lights, ensuring continuous illumination.</p>
+        <p><strong>Lighting Requirements:</strong> The chamber must remain brightly lit at all times to prevent ABR-002 from effectively camouflaging itself. Light levels should be maintained at a minimum of 10,000 lumens. In the event of a power outage, backup generators must activate immediately to restore full lighting.</p>
+        <p><strong>Surveillance:</strong> Continuous 24/7 surveillance is mandatory, with at least two personnel monitoring live feeds at all times. Infrared and ultraviolet cameras are to be utilized to detect ABR-002's presence, as it may attempt to obscure itself using its optical properties.</p>
+        <p><strong>Access Restrictions:</strong> Entry to the containment chamber is restricted to personnel with Clearance Level 4 (C4) or higher. All personnel entering the chamber must wear full-body reflective suits to minimize the risk of physical contact. Any maintenance or research activities require prior approval from the Site Director and must be conducted under strict supervision.</p>
+
+        <h2>Risk Assessment</h2>
         <p>ABR-002 displays advanced cognitive abilities, including strategic planning, problem-solving, and adaptive learning. Observations indicate a malevolent intelligence with a keen understanding of human behavior and environmental manipulation. It demonstrates predatory instincts, often waiting in ambush and using its optical properties to its advantage. ABR-002 has shown the ability to anticipate containment strategies and adapt its behavior to counteract them, indicating high levels of cognitive function and situational awareness.</p>
 
-        <h2>Neurological Disruption</h2>
+        <h2>Behavioral Analysis</h2>
         <p>Upon physical contact with a living host, ABR-002 initiates a profound neurological disruption. This effect begins within seconds of contact, leading to a cascade of symptoms including:</p>
         <ul>
-            <li>Phase 1 (Initial Contact): The host experiences disorientation, vertigo, and blurred vision. These initial symptoms are accompanied by a sense of impending doom and acute anxiety.</li>
-            <li>Phase 2 (Neurological Overload): Within minutes, the host's central nervous system becomes overwhelmed, resulting in severe headaches, auditory hallucinations, and involuntary muscle spasms. At this stage, the host's cognitive functions begin to degrade, leading to confusion and impaired decision-making.</li>
-            <li>Phase 3 (Behavioral Alteration): The final phase involves a complete override of the host's autonomous functions. The host's behavior becomes erratic and aggressive, often exhibiting signs of being controlled by an external force. They become highly susceptible to suggestion and may act against their own interests or safety.</li>
+            <li><strong>Phase 1 (Initial Contact):</strong> Disorientation, vertigo, and blurred vision. These initial symptoms are accompanied by a sense of impending doom and acute anxiety.</li>
+            <li><strong>Phase 2 (Neurological Overload):</strong> Within minutes, the host's central nervous system becomes overwhelmed, resulting in severe headaches, auditory hallucinations, and involuntary muscle spasms. At this stage, the host's cognitive functions begin to degrade, leading to confusion and impaired decision-making.</li>
+            <li><strong>Phase 3 (Behavioral Alteration):</strong> The final phase involves a complete override of the host's autonomous functions. The host's behavior becomes erratic and aggressive, often exhibiting signs of being controlled by an external force. They become highly susceptible to suggestion and may act against their own interests or safety.</li>
         </ul>
 
-        <h2>Containment Procedures</h2>
-        <p>Containment Chamber: ABR-002 is to be contained in a 5m x 5m x 5m chamber constructed of non-reflective, high-density polymer, designed to absorb any light within the containment area. The chamber walls must be lined with an array of high-intensity LED lights, ensuring continuous illumination.</p>
-        <p>Lighting Requirements: The chamber must remain brightly lit at all times to prevent ABR-002 from effectively camouflaging itself. Light levels should be maintained at a minimum of 10,000 lumens. In the event of a power outage, backup generators must activate immediately to restore full lighting.</p>
-        <p>Surveillance: Continuous 24/7 surveillance is mandatory, with at least two personnel monitoring live feeds at all times. Infrared and ultraviolet cameras are to be utilized to detect ABR-002's presence, as it may attempt to obscure itself using its optical properties.</p>
-        <p>Access Restrictions: Entry to the containment chamber is restricted to personnel with Clearance Level 4 (C4) or higher. All personnel entering the chamber must wear full-body reflective suits to minimize the risk of physical contact. Any maintenance or research activities require prior approval from the Site Director and must be conducted under strict supervision.</p>
-
-        <h2>Incident Log ABR-002-01</h2>
-        <p>Date: ██/██/████</p>
-        <p>Summary: During a routine containment check, Researcher ██████ inadvertently made contact with ABR-002. The researcher exhibited immediate signs of neurological disruption, including severe disorientation and aggressive behavior. Security personnel intervened, but the researcher inflicted significant damage to containment equipment before being subdued. The incident resulted in the researcher's termination to prevent further contamination. Post-incident analysis indicated that ABR-002 had adapted its strategy to exploit a previously unrecognized vulnerability in containment protocols.</p>
+        <h2>Incident Reports</h2>
+        <p><strong>Incident Log ABR-002-01</strong></p>
+        <p><strong>Date:</strong> ██/██/████</p>
+        <p><strong>Summary:</strong> During a routine containment check, Researcher ██████ inadvertently made contact with ABR-002. The researcher exhibited immediate signs of neurological disruption, including severe disorientation and aggressive behavior. Security personnel intervened, but the researcher inflicted significant damage to containment equipment before being subdued. The incident resulted in the researcher's termination to prevent further contamination. Post-incident analysis indicated that ABR-002 had adapted its strategy to exploit a previously unrecognized vulnerability in containment protocols.</p>
 
         <h2>Additional Notes</h2>
         <p>ABR-002's ability to move inconspicuously in low-light conditions presents a significant risk to containment integrity. Continuous research into ABR-002's properties and potential countermeasures is imperative to ensure the safety of all ARI personnel and facilities. Enhanced lighting and surveillance protocols are to be reviewed and updated regularly based on new findings.</p>
