--- a/ABR002.html
+++ b/ABR002.html
@@ -10,7 +10,7 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #757575; /* Set the entire background to grey */
+            background-color: #3a3a3a; /* Set the entire background to grey */
             color: #D3D3D3; /* Light grey text color for body */
         }
         .navbar {
@@ -20,13 +20,13 @@
         .navbar a {
             float: left;
             display: block;
-            color: #D3D3D3; /* Light grey text color for navbar links */
+            color: #f2f2f2; /* Light grey text color for navbar links */
             text-align: center;
             padding: 14px 20px;
             text-decoration: none;
         }
         .navbar a:hover {
-            background-color: #ddd;
+            background-color: #464646;
             color: black;
         }
         .container {
