--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             align-items: center;
             height: 100vh;
             font-family: 'Poppins', sans-serif;
-            background: url('https://imgur.com/nuyIPZf') no-repeat center center fixed; 
+            background: url('ABRXXX.jpeg') no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
